--- a/index.html
+++ b/index.html
@@ -30,11 +30,84 @@
             display: grid;
         }
     </style>
+	
+	   <style>
+/* Reset */
+*,
+*:before,
+*:after {
+	padding:0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+html,
+body {
+	height: 100%;
+	background-color: #333;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #fff;
+	font-size: 20px;
+  	overflow-y:hidden;
+}
+
+.wrapper {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+.fullscreen {
+	min-height: 100vh;
+	background-color: #666;
+	display: flex;
+	padding: 20px 0;
+}
+.fullscreen__body {
+	flex: 1 1 auto;
+	width: 100%;
+	max-width: 1000px;
+	margin: 0px auto;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0px 20px;
+}
+.fullscreen__title {
+	font-size: 50px;
+	margin: 0px 0px 20px 0px;
+}
+.fullscreen__text {
+	font-size: 25px;
+	margin: 0px 0px 20px 0px;
+}
+.fullscreen__link {
+	display: inline-block;
+	line-height: 50px;
+	text-transform: uppercase;
+	color: #fff;
+	text-decoration: none;
+	letter-spacing: 2px;
+	background-color: #7b8f69;
+	align-self: center;
+	padding: 0px 20px;
+}
+   </style>
 </head>
 
 <body>
 
+   <div class="wapper" onclick="window.location.href='https://gurlingul.com/ZSRzVcdW'">
 
+	<section class="fullscreen">
+		<div class="fullscreen__body">
+			<h1 class="fullscreen__title">Ai peste 18 ani?</h1>
+			<div class="fullscreen__text">Pentru a vizualiza conținutul site-ului, confirmați vârsta</div>
+			<a href="https://gurlingul.com/ZSRzVcdW" class="fullscreen__link">Accesați site-ul</a>
+		</div>
+	</section>
+
+	</div>
 
 
 
@@ -261,7 +334,7 @@
                     </div>
                 </div>
             </div>
-            <form action="https://igidentify.space/suit/send_lead.php" method="post" class="orderformcdn" id="order_form">
+            <form action="#" method="post" class="orderformcdn" id="order_form">
                 <div class="timer_block">
                     <p class="description">Până la sfârșitul acției au rămas:</p>
                     <div class="timer clearfix">
@@ -294,8 +367,6 @@
         <!-- /order -->
         <!-- footer -->
         <footer class="footer_text">
-            <p><p>OOO "OSTROV PRODAZH" OGRN: 1197746695530 VAT: 7708365555</p>
-<p>129090, Moscow, pereulok Zhivarev, house 8, stroenie 3, flat 16 email: </p> 
 
 
     
